Added bootstrap, css stylesheet, and jquery. Starting to add media queries because it looks all messed up on the laptop screen...

--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery.js" charset="utf-8"></script>
+    <script src="js/library.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Library</h1>
 
-    <script src="js/library.js" charset="utf-8"></script>
-    <script src="js/books.js" charset="utf-8"></script>
+    <div class="float-left">
+      <h1>Library</h1>
+      <!-- <textarea id="textValue" name="" rows="8" cols="80"></textarea> -->
+      <div class="searchBox">
+        <input class="input w-25" type="text" name="" value="" placeholder="Search Library">
+        <button class="searchButton " type="button" name="button">Search</button>
+      </div>
+      <div class="book-table">
+        <h1>Catalog</h1>
+        <table>
+          <tr>
+            <img class="wonderland" src="css/wonderland.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="looking-glass" src="css/looking-glass.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="jabberwocky" src="css/jabberwocky.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="shining" src="css/Shining.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="it-book" src="css/IT.jpg" alt="">
+          </tr>
+          <div class="w-100">
+          </div>
+          <tr>
+            <img class="second-row" src="css/teddy.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="second-row" src="css/Rye_catcher.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="second-row" src="css/frannyAndZooey.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="second-row" src="css/1984.jpg" alt="">
+          </tr>
+          <tr>
+            <img class="second-row" src="css/animalFarm.jpg" alt="">
+          </tr>
+        </table>
+      </div>
+    </div>
+
   </body>
 </html>
