--- a/index.html
+++ b/index.html
@@ -3,58 +3,138 @@
   <head>
     <title></title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/colreorder/1.4.1/css/colReorder.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.1.3/css/fixedHeader.dataTables.min.css">
+
     <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/jquery.js" charset="utf-8"></script>
-    <script src="js/library.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
-    <div class="float-left">
-      <h1>Library</h1>
-      <!-- <textarea id="textValue" name="" rows="8" cols="80"></textarea> -->
-      <div class="searchBox">
-        <input class="input w-25" type="text" name="" value="" placeholder="Search Library">
-        <button class="searchButton " type="button" name="button">Search</button>
-      </div>
-      <div class="book-table">
-        <h1>Catalog</h1>
-        <table>
-          <tr>
-            <img class="wonderland" src="css/wonderland.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="looking-glass" src="css/looking-glass.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="jabberwocky" src="css/jabberwocky.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="shining" src="css/Shining.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="it-book" src="css/IT.jpg" alt="">
-          </tr>
-          <div class="w-100">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+      Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-          <tr>
-            <img class="second-row" src="css/teddy.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="second-row" src="css/Rye_catcher.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="second-row" src="css/frannyAndZooey.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="second-row" src="css/1984.jpg" alt="">
-          </tr>
-          <tr>
-            <img class="second-row" src="css/animalFarm.jpg" alt="">
-          </tr>
-        </table>
+          <div class="modal-body">
+            <form class="modalForm" action="index.html" method="post">
+              <input id="coverImg" type="url" name="file" placeholder="Cover Image">
+              <input id="titleInput" type="text" name="" placeholder="Title">
+              <input id="authorInput" type="text" name="" placeholder="Author">
+              <input id="pagesInput" type="text" name="" placeholder="Number of Pages">
+              <input id="dateInput" type="text" name="" placeholder="Publication Date">
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button id="addBookModal" type="button" class="btn btn-primary">Add!</button>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- <textarea id="textValue" name="" rows="8" cols="80"></textarea> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <h2>Library</h2>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Actions
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Add single book</a>
+              <a class="dropdown-item" href="#">Add multiple books</a>
+              <a class="dropdown-item" href="#">Remove by Title</a>
+              <a class="dropdown-item" href="#">Remove by Author</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Get book by Title</a>
+              <a class="dropdown-item" href="#">Get books by Author</a>
+              <a class="dropdown-item" href="#">View all Authors</a>
+              <a class="dropdown-item" href="#">Get random book</a>
+              <a class="dropdown-item" href="#">Get random Author</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Save storage</a>
+              <a class="dropdown-item" href="#">Load storage</a>
+              <a class="dropdown-item" href="#">Clear storage</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <h1>Library</h1>
+
+    <table id="myTable" class="table table-dark table-hover table-striped" style="width: 50%" data-pagination="true" data-search="true" data-toggle="table">
+      <thead>
+        <tr>
+          <th scope="col" data-sortable="true" searchable="true">Cover</th>
+          <th scope="col" data-sortable="true" searchable="true" data-field="id">Title</th>
+          <th scope="col" data-sortable="true" searchable="true" data-field="id">Author</th>
+          <th scope="col" data-sortable="true" searchable="true" data-field="id">Number of Pages</th>
+          <th scope="col" data-sortable="true" searchable="true" data-field="id">Publication Date</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+      </tbody>
+    </table>
+
+    <!-- <form>
+      <div class="form-row">
+        <div class="form-group col-md-5">
+          <input type="title" class="form-control" id="inputTitle" placeholder="Title">
+        </div>
+      </div>
+      <div class="form-group col-md-4">
+        <input type="text" class="form-control" id="inputAuthor" placeholder="Author">
+      </div>
+      <div class="form-group col-md-3">
+        <input type="text" class="form-control" id="inputPageNum" placeholder="# of Pages">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <input type="text" class="form-control" id="inputPubDate">
+        </div>
+      </div>
+      <button id="addBookBtn" type="submit" class="btn btn-primary">Add single book</button>
+      <button id="addBooksbtn" type="submit" class="btn btn-primary">Add multiple books</button>
+    </form> -->
+
+      <!-- <button onclick="_buildTable();">Click to build the table!</button>
+      <table id="myTable" class="display" style="width:90%">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th># of Pages</th>
+            <th>Publication date</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody">
+        </tbody>
+      </table> -->
+
+    <script src="js/jquery.js" charset="utf-8"></script>
+    <script src="js/bootstrap.bundle.js" charset="utf-8"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" charset="utf-8"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.colVis.min.js" charset="utf-8"></script>
+    <script src="https://cdn.datatables.net/colreorder/1.4.1/js/dataTables.colReorder.min.js" charset="utf-8"></script>
+    <script src="https://cdn.datatables.net/fixedheader/3.1.3/js/dataTables.fixedHeader.min.js" charset="utf-8"></script>
+    <script src="js/library.js" charset="utf-8"></script>
 
   </body>
 </html>
