--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
   <head>
     <title></title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.datatables.net/colreorder/1.4.1/css/colReorder.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.1.3/css/fixedHeader.dataTables.min.css">
-
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -14,7 +10,7 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-      Launch demo modal
+      Books!
     </button>
 
     <!-- Modal -->
@@ -28,12 +24,12 @@
             </button>
           </div>
           <div class="modal-body">
-            <form class="modalForm" action="index.html" method="post">
+            <form class="modalForm">
               <input id="coverImg" type="url" name="file" placeholder="Cover Image">
               <input id="titleInput" type="text" name="" placeholder="Title">
               <input id="authorInput" type="text" name="" placeholder="Author">
-              <input id="pagesInput" type="text" name="" placeholder="Number of Pages">
-              <input id="dateInput" type="text" name="" placeholder="Publication Date">
+              <input id="pagesInput" type="integer" name="" placeholder="Number of Pages">
+              <input id="dateInput" type="date" name="" placeholder="Publication Date">
             </form>
           </div>
           <div class="modal-footer">
@@ -44,7 +40,6 @@
       </div>
     </div>
 
-    <!-- <textarea id="textValue" name="" rows="8" cols="80"></textarea> -->
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
       <h2>Library</h2>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,27 +88,6 @@
       </tbody>
     </table>
 
-    <!-- <form>
-      <div class="form-row">
-        <div class="form-group col-md-5">
-          <input type="title" class="form-control" id="inputTitle" placeholder="Title">
-        </div>
-      </div>
-      <div class="form-group col-md-4">
-        <input type="text" class="form-control" id="inputAuthor" placeholder="Author">
-      </div>
-      <div class="form-group col-md-3">
-        <input type="text" class="form-control" id="inputPageNum" placeholder="# of Pages">
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-2">
-          <input type="text" class="form-control" id="inputPubDate">
-        </div>
-      </div>
-      <button id="addBookBtn" type="submit" class="btn btn-primary">Add single book</button>
-      <button id="addBooksbtn" type="submit" class="btn btn-primary">Add multiple books</button>
-    </form> -->
-
       <!-- <button onclick="_buildTable();">Click to build the table!</button>
       <table id="myTable" class="display" style="width:90%">
         <thead>
@@ -130,10 +104,6 @@
 
     <script src="js/jquery.js" charset="utf-8"></script>
     <script src="js/bootstrap.bundle.js" charset="utf-8"></script>
-    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" charset="utf-8"></script>
-    <script src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.colVis.min.js" charset="utf-8"></script>
-    <script src="https://cdn.datatables.net/colreorder/1.4.1/js/dataTables.colReorder.min.js" charset="utf-8"></script>
-    <script src="https://cdn.datatables.net/fixedheader/3.1.3/js/dataTables.fixedHeader.min.js" charset="utf-8"></script>
     <script src="js/library.js" charset="utf-8"></script>
 
   </body>
