Number of pages working correctly with local storage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <input id="coverImg" type="url" name="file" placeholder="Cover Image">
               <input id="titleInput" type="text" name="" placeholder="Title">
               <input id="authorInput" type="text" name="" placeholder="Author">
-              <input id="pagesInput" type="integer" name="" placeholder="Number of Pages">
+              <input id="pagesInput" type="number" name="" placeholder="Number of Pages">
               <input id="dateInput" type="date" name="" placeholder="Publication Date">
             </form>
           </div>
