Remove books function, get authors function.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <!-- Button trigger modal -->
+    <!-- Button trigger modal addBook -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
       Books!
     </button>
@@ -18,7 +18,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Add Books Here</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -35,6 +35,32 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button id="addBookModal" type="button" class="btn btn-primary">Add!</button>
+            <button id="addNotherBook" type="button" name="button">Add Another Book?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Button trigger modal Authors -->
+    <button id="getAuthorBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#getAuthors">
+      Get Authors
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="getAuthors" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">All Authors</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="listOfAuthors" class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -82,6 +108,7 @@
           <th scope="col" data-sortable="true" searchable="true" data-field="id">Author</th>
           <th scope="col" data-sortable="true" searchable="true" data-field="id">Number of Pages</th>
           <th scope="col" data-sortable="true" searchable="true" data-field="id">Publication Date</th>
+          <th scope="col" data-sortable="true" searchable="true" data-field="id">Remove</th>
         </tr>
       </thead>
       <tbody id="tableBody">
