--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Button trigger modal addBook -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#moreBooksModal">
+    <button id="addMultipleBooksButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#moreBooksModal">
       Add Multiple Books
     </button>
 
@@ -57,7 +57,6 @@
           </div>
           <div class="modal-body-two">
             <form class="modalFormOne">
-              
             </form>
           </div>
           <div class="modal-footer">
@@ -87,6 +86,31 @@
           </div>
           <div class="listOfAuthors" class="modal-body">
 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Button trigger random book -->
+    <button id="randomBookBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#randomBook">
+      Random Book
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="randomBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Random Book</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="randomBookBody">
+            
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
