Everything works except the bonus stuff, but I can set items in local storage

--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
     <div>
       <form class="locationForm" action="index.html" method="post">
           <p>Country :</p>
-          <input id="countryInput" type="text" name="" value="">
+          <input class="countryInput" type="text" name="" value="">
           <p>State :</p>
-          <input id="stateInput" type="text" name="" value="">
-          <span>City :</span>
-          <input id="cityInput" type="text" name="" value="">
-          <p>Zip Code :</p>
-          <input id="zipInput" type="number" name="" value="">
-          <p>Ranking :</p>
-          <input id="rankingInput" type="number" name="" value="">
-          <p>Member Count :</p>
-          <input id="memberInput" type="number" name="" value="">
+          <input class="stateInput" type="text" name="" value="">
+          <p>Page :</p>
+          <input class="pageInput" type="number" name="" value="">
       </form>
       <button id="submitButton" type="button" name="button">Submit</button>
     </div>
