--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </tbody>
       </table>
     </div>
+    <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" charset="utf-8"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
-
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5a5OgYUEjpVbdtKMYcchmKytjs1uHJLc&callback=initMap"async defer></script>
   </body>
 </html>
